--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html> <!--Author: Pranav Rajpurkar 2016-->
 <html xmlns="http://www.w3.org/1999/html">
 <head>
@@ -9,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <!--    <link rel="shortcut icon" href="images/spider_logo.png" />-->
     <link rel="stylesheet" href="css/main.css">
-    <link rel="canonical" href="#">
+    <link rel="canonical" href="index.html#">
     <!--- <link rel="alternate" type="application/rss+xml" title="yale-lily.github.io" href="http://yale-lily.github.io//feed.xml"> --->
     <script type="text/javascript" src="js/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <!-- Latest compiled and minified CSS -->
@@ -43,7 +42,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h1 id="appTitle" height="40">
-                    <img src="/SpokenWOZ-github.io/images/spokenwoz_log.png" height="110">
+                    <img src="images/spokenwoz_log.png" height="110">
 <!--                    <img src="images/spider_logo.png" alt="test image" height="100" />-->
                 </h1>
             </div>
@@ -54,7 +53,7 @@
 <div class="cover" id="contentCover">
     <div class="container">
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-1">
                 <div class="infoCard">
                     <div class="infoBody">
                         <div class="infoHeadline">
@@ -90,7 +89,7 @@
                         <div class="left"> Details of baseline models and evaluation script can be found on the following GitHub site:
                         <a class="btn actionBtn inverseBtn" href="https://github.com/AlibabaResearch/DAMO-ConvAI/tree/main/spokenwoz" download>SpokenWOZ Github Page</a>
                         </div>
-                        <div class="left">We will update the models and results on the leaderboard based on the publicly available papers. Feel free to contact <a href="sishuzheng@foxmail.com">Shuzheng Si</a> if you want to submit your results.
+                        <div class="left">We will update the models and results on the leaderboard based on the publicly available papers. Feel free to contact <a href="https://spokenwoz.github.io/SpokenWOZ-github.io/sishuzheng@foxmail.com">Shuzheng Si</a> if you want to submit your results.
                         </div>
                         </p>
                         <div class="infoHeadline">
@@ -100,13 +99,13 @@
                         <div class="left">   Data collection includes (1) Collection of dialogue audio and (2) Annotation of dialogue. Strict quality control is performed at each collection stage. More details can be found in our paper.
                         </div>
                         </p>
-                        <img src="/SpokenWOZ-github.io/images/spokenwoz.png">
+                        <img src="images/spokenwoz.png">
                         </p>
                          <div class="infoHeadline">
                             <h2>Have Questions or Want to Contribute ?</h2>
                         </div>
                         <p align="left">
-                        <div class="left">  Feel free to contact <a href="sishuzheng@foxmail.com">Shuzheng Si</a>, <a href="mawentao.mwt@alibaba-inc.com">Wentao Ma</a>, and <a href="haoyugao183@gmail.com">Haoyu Gao</a>. We would greatly appreciate it if you could provide us your helpful suggestions for this project.
+                        <div class="left">  Feel free to contact <a href="https://spokenwoz.github.io/SpokenWOZ-github.io/sishuzheng@foxmail.com">Shuzheng Si</a>, <a href="https://spokenwoz.github.io/SpokenWOZ-github.io/mawentao.mwt@alibaba-inc.com">Wentao Ma</a>, and <a href="https://spokenwoz.github.io/SpokenWOZ-github.io/haoyugao183@gmail.com">Haoyu Gao</a>. We would greatly appreciate it if you could provide us your helpful suggestions for this project.
                         </div>
                         </p>
                          <div class="infoHeadline">
